feat: publicing chart model
