# backend/api/docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api/",
     "paths": {
-        "/chart/list": {
+        "/chart/list/{username}": {
             "get": {
                 "security": [
                     {
@@ -24,9 +24,18 @@
                     "application/json"
                 ],
                 "tags": [
-                    "chart"
+                    "Chart"
                 ],
                 "summary": "Get chart details",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Chart details",
@@ -99,7 +108,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.createRatingInput"
+                            "$ref": "#/definitions/views.CreateRatingInput"
                         }
                     }
                 ],
@@ -108,62 +117,6 @@
                         "description": "Rating created",
                         "schema": {
                             "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/rating/given/{username}": {
-            "get": {
-                "description": "Get given ratings",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Rating"
-                ],
-                "summary": "Get given ratings",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Username",
-                        "name": "username",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Page",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Per page",
-                        "name": "per_page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Order by",
-                        "name": "order_by",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Order",
-                        "name": "order",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Ratings",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.RatingOutput"
                         }
                     }
                 }
@@ -230,62 +183,6 @@
                         "description": "Ratings",
                         "schema": {
                             "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/rating/received/{username}": {
-            "get": {
-                "description": "Get received ratings",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Rating"
-                ],
-                "summary": "Get received ratings",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Username",
-                        "name": "username",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Page",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Per page",
-                        "name": "per_page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Order by",
-                        "name": "order_by",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Order",
-                        "name": "order",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Ratings",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.RatingOutput"
                         }
                     }
                 }
@@ -363,7 +260,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.UserLoginRequest"
+                            "$ref": "#/definitions/views.UserLoginRequest"
                         }
                     }
                 ],
@@ -417,7 +314,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.CreateUserRequest"
+                            "$ref": "#/definitions/views.CreateUserRequest"
                         }
                     }
                 ],
@@ -474,7 +371,7 @@
                     "200": {
                         "description": "User details\" {int} rank \"User rank",
                         "schema": {
-                            "$ref": "#/definitions/controllers.UserOutput"
+                            "$ref": "#/definitions/views.UserOutput"
                         }
                     },
                     "404": {
@@ -488,7 +385,21 @@
         }
     },
     "definitions": {
-        "controllers.CreateUserRequest": {
+        "views.CreateRatingInput": {
+            "type": "object",
+            "required": [
+                "rated_username"
+            ],
+            "properties": {
+                "rate": {
+                    "type": "integer"
+                },
+                "rated_username": {
+                    "type": "string"
+                }
+            }
+        },
+        "views.CreateUserRequest": {
             "type": "object",
             "properties": {
                 "first_name": {
@@ -508,24 +419,7 @@
                 }
             }
         },
-        "controllers.RatingOutput": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "rate": {
-                    "type": "number"
-                },
-                "rated_username": {
-                    "type": "string"
-                },
-                "rater_username": {
-                    "type": "string"
-                }
-            }
-        },
-        "controllers.UserLoginRequest": {
+        "views.UserLoginRequest": {
             "type": "object",
             "properties": {
                 "password": {
@@ -536,7 +430,7 @@
                 }
             }
         },
-        "controllers.UserOutput": {
+        "views.UserOutput": {
             "type": "object",
             "properties": {
                 "average_rate": {
@@ -551,6 +445,12 @@
                 "last_name": {
                     "type": "string"
                 },
+                "picture_path": {
+                    "type": "string"
+                },
+                "rank": {
+                    "type": "integer"
+                },
                 "role": {
                     "type": "string"
                 },
@@ -561,21 +461,6 @@
                     "type": "integer"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "controllers.createRatingInput": {
-            "type": "object",
-            "required": [
-                "rate",
-                "rated_username"
-            ],
-            "properties": {
-                "rate": {
-                    "type": "number"
-                },
-                "rated_username": {
                     "type": "string"
                 }
             }
