# backend/api/routes/chart_routes.go
@@ -2,13 +2,12 @@ package routes
 
 import (
 	"backend/controllers"
-	middleware "backend/middlewares"
 	"github.com/gin-gonic/gin"
 )
 
 func InitializeChartRoutes(router *gin.RouterGroup) {
 	chartGroup := router.Group("/chart")
 	{
-		chartGroup.GET("/list", middleware.RequireAuth, controllers.ChartDetails)
+		chartGroup.GET("/list/:username", controllers.ChartDetails)
 	}
 }
